--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Whitney Book";
-    src: url("https://github.com/Poly-cryptic/classic-discord-font/raw/main/Whitney-Book.woff2") format("woff2");
+    src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-Book.woff2") format("woff2");
     font-weight: 500;
     font-style: normal;
     font-display: swap;
