--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Whitney";
-    src: url("https/poly-cryptic.github.io/classic-discord-font/Whitney-MediumItalic.woff2") format("woff2");
+    src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-MediumItalic.woff2") format("woff2");
     font-weight: 500;
     font-style: italic;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: "Whitney";
-    src: url("https/poly-cryptic.github.io/classic-discord-font/Whitney-Semibold.woff2") format("woff2");
+    src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-Semibold.woff2") format("woff2");
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: "Whitney";
-    src: url("https/poly-cryptic.github.io/classic-discord-font/Whitney-Medium.woff2") format("woff2");
+    src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-Medium.woff2") format("woff2");
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
     font-family: "Whitney";
-    src: url("https/poly-cryptic.github.io/classic-discord-font/Whitney-Bold.woff2") format("woff2");
+    src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-Bold.woff2") format("woff2");
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -32,7 +32,7 @@
 
 @font-face {
     font-family: "Whitney";
-    src: url("https/poly-cryptic.github.io/classic-discord-font/Whitney-SemiboldItalic.woff2") format("woff2");
+    src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-SemiboldItalic.woff2") format("woff2");
     font-weight: 500;
     font-style: italic;
     font-display: swap;
@@ -40,7 +40,7 @@
 
 @font-face {
     font-family: "Whitney";
-    src: url("https/poly-cryptic.github.io/classic-discord-font/Whitney-LightItalic.woff2") format("woff2");
+    src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-LightItalic.woff2") format("woff2");
     font-weight: 300;
     font-style: italic;
     font-display: swap;
@@ -48,12 +48,8 @@
 
 @font-face {
     font-family: "Whitney";
-    src: url("https/poly-cryptic.github.io/classic-discord-font/Whitney-Light.woff2") format("woff2");
+    src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-Light.woff2") format("woff2");
     font-weight: 300;
     font-style: normal;
     font-display: swap;
-}
-
-body,html {
-    font-family: "Whitney Book", Arial, Helvetica, sans-serif;
 }
