--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,21 @@
 @font-face {
     font-family: "Whitney";
+    src: url("https://poly-cryptic.github.io/classic-discord-font/WhitneyBook.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Whitney";
+    src: url("https://poly-cryptic.github.io/classic-discord-font/WhitneyBookItalic.woff2") format("woff2");
+    font-weight: 400;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Whitney";
     src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-MediumItalic.woff2") format("woff2");
     font-weight: 500;
     font-style: italic;
@@ -9,7 +25,7 @@
 @font-face {
     font-family: "Whitney";
     src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-Semibold.woff2") format("woff2");
-    font-weight: 500;
+    font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
@@ -25,6 +41,7 @@
 @font-face {
     font-family: "Whitney";
     src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-Bold.woff2") format("woff2");
+    font-weight: 700;
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -33,7 +50,7 @@
 @font-face {
     font-family: "Whitney";
     src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-SemiboldItalic.woff2") format("woff2");
-    font-weight: 500;
+    font-weight: 600;
     font-style: italic;
     font-display: swap;
 }
@@ -41,7 +58,7 @@
 @font-face {
     font-family: "Whitney";
     src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-LightItalic.woff2") format("woff2");
-    font-weight: 300;
+    font-weight: 200;
     font-style: italic;
     font-display: swap;
 }
@@ -49,7 +66,7 @@
 @font-face {
     font-family: "Whitney";
     src: url("https://poly-cryptic.github.io/classic-discord-font/Whitney-Light.woff2") format("woff2");
-    font-weight: 300;
+    font-weight: 200;
     font-style: normal;
     font-display: swap;
 }
